--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -15,7 +15,7 @@
                      infinite-scroll-disabled="WidgetHome.noMore"
                         >
                     <div class="clickable col-xs-6 pull-left text-overlay" ng-repeat="item in WidgetHome.items"
-                         ng-click="WidgetHome.goToMedia($index)" ng-class-odd="list-item-odd"
+                         ng-click="WidgetHome.goTo(item.id)" ng-class-odd="list-item-odd"
                          ng-class-even="list-item-even">
                         <div class="list-item-media text-center border-radius-three overflow-hidden text-overlay">
                             <div play-btn="{{item.data.videoUrl.length > 0  || (WidgetHome.media.data.design.skipMediaPage && (item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0)) }}" class="list-media-holder text-overlay">
