--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -7,7 +7,7 @@
 
 
                         <div class="people-banner" data-ng-hide="WidgetMedia.showVideo"
-                             style="background:url('{{WidgetMedia.item.data.topImage|resizeImage:342:192}}') no-repeat; background-position:center center; background-size:cover !important;height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;">
+                             style="background:url('{{WidgetMedia.item.data.topImage}}') no-repeat; background-position:center center; background-size:cover !important;height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;">
                             <div class="people-bg padding-bottom-fifteen clearfix" style="height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;">
                                 <div class="people-holder clearfix">
                                     <div class="people-media text-center padding-top-fifteen"
@@ -33,16 +33,30 @@
                 </div>
             </div>
             <div class="padded">
-                <div class="link-list" data-ng-hide="WidgetMedia.media.data.design.skipMediaPage">
-                    <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl"
-                       href="#/nowplaying/{{WidgetMedia.item.id}}">Listen</a>
-                    <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl"
-                       ng-click="WidgetMedia.toggleShowVideo();">Watch</a>
-                    <a id="sourceToggleButton" class="text-primary" ng-if="WidgetMedia.item.data.srcUrl"
-                       ng-click="WidgetMedia.showSourceIframe()">View Source</a>
-                    <a class="text-primary" ng-if="WidgetMedia.item.data.links.length" ng-click="WidgetMedia.openLinks(WidgetMedia.item.data.links)">More Options</a>
+                <div class="item-actions">
+                    <div class="link-list">
+                        <a class="media-action" ng-click="WidgetMedia.playAudio();" ng-if="WidgetMedia.mediaType == 'AUDIO'">
+                            <i class="btn btn-success share glyphicon glyphicon-volume-up"></i>
+                        </a>
+                        <a class="media-action video" ng-click="WidgetMedia.toggleShowVideo();"
+                            ng-if="WidgetMedia.mediaType == 'VIDEO'">
+                            <i class="btn btn-success share glyphicon glyphicon-play"></i>
+                        </a>
+                        <a ng-if="WidgetMedia.item.srcUrl" ng-click="WidgetMedia.openLink(WidgetMedia.item.srcUrl)"
+                            target="_blank">
+                            <i class="glyphicon glyphicon-screenshot"></i>
+                        </a>
+                    </div>
+                    <div class="li-actions">
+                        <i class="share glyphicon glyphicon glyphicon-edit" ng-click="WidgetMedia.addNote()" ng-click=""
+                            role="button"></i>
+                        <i class="share glyphicon glyphicon-share-alt" ng-click="WidgetMedia.share($event)" role="button"></i>
+                        <i class="glyphicon icon bookmark" style="font-family: 'Glyphicons Halflings' !important;"
+                            ng-class="{ 'glyphicon-star-empty' : !WidgetMedia.item.data.bookmarked, 'glyphicon-star' : WidgetMedia.item.data.bookmarked }"
+                            ng-click="WidgetMedia.bookmark($event)" role="button"></i>
+                    </div>
                 </div>
-                <hr class="small">
+                <!-- <hr class="small"> -->
                 <p ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml"></p>
 
                 <!--<div class="dynamic-links" ng-repeat="link in WidgetMedia.item.data.links">
