--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -904,7 +904,7 @@ img {
 
 .layout3 .action .li-actions-item .share { right: 40px;}
 .layout3 .action .li-actions-item .star { line-height: 2.5; }
-
+.share { display: none !important;}
 
 
 .layout2 .list-media-holder .li-actions-item i{
