--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -15,7 +15,7 @@
                     <div class="list-item-odd col-xs-6 pull-left clickable " ng-click="WidgetHome.goToMedia($index)">
                         <div class="list-item-media text-center overflow-hidden text-overlay">
                             <div class="li-actions-item">
-                                <i class="share glyphicon glyphicon-share-alt" ng-click="WidgetHome.share($event, item)" role="button"></i>
+                                <i class="share glyphicon glyphicon-share-alt" ng-if="allowShare"  ng-click="WidgetHome.share($event, item)" role="button"></i>
                                 <i class="bookmark glyphicon" style="right: 0; font-family: 'Glyphicons Halflings' !important; position: absolute;" ng-class="{ 'glyphicon-star-empty' : !item.data.bookmarked, 'glyphicon-star' : item.data.bookmarked }"
                                  ng-click="WidgetHome.bookmark($event, item)" role="button"></i>
                             </div>
@@ -40,7 +40,7 @@
                          ng-if="WidgetHome.items[$index + 1]">
                         <div class="list-item-media text-center overflow-hidden text-overlay">
                             <div class="li-actions-item">
-                                <i class="share glyphicon glyphicon-share-alt" ng-click="WidgetHome.share($event, WidgetHome.items[$index + 1])" role="button"></i>
+                                <i class="share glyphicon glyphicon-share-alt" ng-if="allowShare" ng-click="WidgetHome.share($event, WidgetHome.items[$index + 1])" role="button"></i>
                                 <i class="bookmark glyphicon" style="right: 0; font-family: 'Glyphicons Halflings' !important; position: absolute;" ng-class="{ 'glyphicon-star-empty' : !WidgetHome.items[$index + 1].data.bookmarked, 'glyphicon-star' : WidgetHome.items[$index + 1].data.bookmarked }"
                                  ng-click="WidgetHome.bookmark($event, WidgetHome.items[$index + 1])" role="button"></i>
                             </div>
