--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <!-- <hr class="small" ng-if="WidgetMedia.item.data.body"> -->
-            <p ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml"></p>
+            <p class="wysiwyg" ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml"></p>
 
 
             <!--<div class="dynamic-links" ng-repeat="link in WidgetMedia.item.data.links">
