--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -3,7 +3,7 @@
         <div class="media-center-banner clearfix text-overlay">
             <div ng-style="WidgetHome.data.content.images.length > 0 ? {'min-height': (9 * deviceWidth / 16) + 'px' } : {}" id="carousel" build-fire-carousel=""></div>
         </div>
-        <div class="text-left padded padding-bottom-zero clearfix text-overlay" >
+        <div class="text-left padded padding-bottom-zero clearfix text-overlay wysiwyg" >
             <p ng-if="WidgetHome.showDescription()" ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml"></p>
         </div>
         <div class="padded padding-top-zero text-overlay">
