--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -9,7 +9,7 @@
 <hr class="none">
 <div class="item clearfix row">
     <div class="main col-md-12 pull-right">
-        <textarea class="form-control" placeholder="WYSIWYG" ui-tinymce="ContentHome.bodyWYSIWYGOptions"
+        <textarea class="form-control wysiwyg" placeholder="WYSIWYG" ui-tinymce="ContentHome.bodyWYSIWYGOptions"
                   ng-model="ContentHome.info.data.content.descriptionHTML"></textarea>
     </div>
 </div>
