--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -44,7 +44,7 @@
         <span>Summary</span>
     </div>
     <div class="main col-md-9 pull-right">
-        <textarea class="form-control" placeholder="Summary Text" ng-model="ContentMedia.item.data.summary"></textarea>
+        <textarea class="form-control wysiwyg" placeholder="Summary Text" ng-model="ContentMedia.item.data.summary"></textarea>
     </div>
 </div>
 <hr class="none">
@@ -56,7 +56,7 @@
 <hr class="none">
 <div class="item clearfix row">
     <div class="main col-md-12 pull-right">
-        <textarea class="form-control" placeholder="WYSIWYG" ui-tinymce="ContentMedia.bodyContentWYSIWYGOptions"
+        <textarea class="form-control wysiwyg" placeholder="WYSIWYG" ui-tinymce="ContentMedia.bodyContentWYSIWYGOptions"
                   ng-model="ContentMedia.item.data.body"></textarea>
     </div>
 </div>
