--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <!-- <hr class="small"> -->
-                <p ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml"></p>
+                <p class="wysiwyg" ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml"></p>
 
                 <!--<div class="dynamic-links" ng-repeat="link in WidgetMedia.item.data.links">
                     <p ng-click="WidgetMedia.executeAction(link)" >
