--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -3,9 +3,9 @@
         <div class="plugin-banner clearfix text-overlay">
             <div ng-style="WidgetHome.data.content.images.length > 0 ? {'min-height': (9 * deviceWidth / 16) + 'px' } : {}" id="carousel" build-fire-carousel=""></div>
         </div>
-        <div class="padded text-left text-overlay" ng-if="WidgetHome.showDescription()">
+        <div class="padded text-left text-overlay wysiwyg" ng-if="WidgetHome.showDescription()">
             <p class="margin-bottom-zero"
-               ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
+            ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
             </p>
         </div>
         <div infinite-scroll="WidgetHome.loadMore()"
