--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -31,8 +31,8 @@
                         <p class="summary ellipsis margin-zero">{{item.data.summary}}</p>
                         <span class="list-item-date" data-ng-if="item.data.mediaDate">{{item.data.mediaDate  | jsDate | date:"MMMM dd, yyyy"}}</span>
                         
-                        <div class="li-actions-item">
-                            <i class="glyphicon bookmark star" ng-class="{ 'glyphicon-star-empty' : !item.data.bookmarked, 'glyphicon-star' : item.data.bookmarked, 'offset' : item.data.mediaDate  }" ng-click="WidgetHome.bookmark($event, item)" role="button"></i>
+                        <div class="li-actions-item" style="bottom:0%;">
+                            <i class="glyphicon bookmark star" style="top:unset !important; bottom:10%;" ng-class="{ 'glyphicon-star-empty' : !item.data.bookmarked, 'glyphicon-star' : item.data.bookmarked}" ng-click="WidgetHome.bookmark($event, item)" role="button"></i>
                         </div>
                     </div>
                 </div>
