--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -831,10 +831,13 @@ input[type=range] {
 }
 
 .li-actions-item i { padding: 5px; } 
-img {
+:not(.plugin-slide)>img{
 	filter: brightness(0.8);
 }
 
+.wysiwyg img{
+	filter: brightness(1) !important;
+}
 .li-actions i {
     font-size: 20px;
     display: inline-block;
