--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -54,6 +54,7 @@
                         <i class="glyphicon icon bookmark" style="font-family: 'Glyphicons Halflings' !important;"
                             ng-class="{ 'glyphicon-star-empty' : !WidgetMedia.item.data.bookmarked, 'glyphicon-star' : WidgetMedia.item.data.bookmarked }"
                             ng-click="WidgetMedia.bookmark($event)" role="button"></i>
+                            <i ng-if="WidgetMedia.item.data.links.length" class="glyphicon glyphicon-align-justify" ng-click="WidgetMedia.openLinks(WidgetMedia.item.data.links)" role="button"></i>
                     </div>
                 </div>
                 <!-- <hr class="small"> -->
