fixed: loop playlist, audio image over background

--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -1,5 +1,5 @@
 <div class="holder now-playing text-center audio-player">
-    <div ng-style="{'background':'url(' + (NowPlaying.currentTrack.image ? NowPlaying.currentTrack.image : 'http://app.buildfire.com/app/media/now-playing.png') + ') no-repeat center center',
+    <div ng-style="{'background':'url(' + (NowPlaying.currentTrack.backgroundImage ? NowPlaying.currentTrack.backgroundImage : 'http://app.buildfire.com/app/media/now-playing.png') + ') no-repeat center center',
          '-o-filter': 'blur(10px) brightness(0.4)',
     '-moz-filter': 'blur(10px) brightness(0.4)',
     '-webkit-filter': 'blur(10px) brightness(0.4)',
