Small Note Change

--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -30,4 +30,4 @@
     </div>
 </div>
 <p class="info" style="margin-top:8px">Note: A complete list of audio files will be added to the user playlist.</p>
-<p class="info">Note: Users will be disabled from turning off the autoplay.</p>
+<p class="info">Note: Users will be disabled from turning off the autoplay, and adding and removing items from the playlist.</p>
