--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -40,7 +40,7 @@
         </div>
         <div class="slider">
             <div>
-                <div class="audio-plyer"><input type="range" min="0.0" max="{{NowPlaying.duration}}"
+                <div class="audio-plyer"><input style="height:45px !important" type="range" min="0.0" max="{{NowPlaying.duration}}"
                         ng-model="NowPlaying.currentTime" ng-change="NowPlaying.changeTime(NowPlaying.currentTime)" />
                 </div>
                 <div ng-if="NowPlaying.currentTime!=0" class="time-indicator" style="float:left">
