fix: Button Text

--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -9,8 +9,8 @@
                 Allow Sharing
             </p>
             <div class="buttons">
-                <button ng-class="{'active': Settings.data.content.allowShare}" ng-click="Settings.setAllowShare(true)">on</button>
-                <button class="toLeft" ng-class="{'active': !Settings.data.content.allowShare}" ng-click="Settings.setAllowShare(false)">off</button>
+                <button ng-class="{'active': Settings.data.content.allowShare}" ng-click="Settings.setAllowShare(true)">On</button>
+                <button class="toLeft" ng-class="{'active': !Settings.data.content.allowShare}" ng-click="Settings.setAllowShare(false)">Off</button>
             </div>
             </div>
             <div class="setting-toggle-children">
@@ -22,8 +22,8 @@
                 Show Source Icon
             </p>
             <div class="buttons">
-                <button ng-class="{'active': Settings.data.content.allowSource}" ng-click="Settings.setAllowSource(true)">on</button>
-                <button class="toLeft" ng-class="{'active': !Settings.data.content.allowSource}" ng-click="Settings.setAllowSource(false)">off</button>
+                <button ng-class="{'active': Settings.data.content.allowSource}" ng-click="Settings.setAllowSource(true)">On</button>
+                <button class="toLeft" ng-class="{'active': !Settings.data.content.allowSource}" ng-click="Settings.setAllowSource(false)">Off</button>
             </div>
             </div>
             <div class="setting-toggle-children">
@@ -41,8 +41,8 @@
                 </span>
             </p>
             <div class="buttons">
-                <button ng-class="{'active': Settings.data.content.forceAutoPlay}" ng-click="Settings.setAutoPlay(true)">on</button>
-                <button class="toLeft" ng-class="{'active': !Settings.data.content.forceAutoPlay}" ng-click="Settings.setAutoPlay(false)">off</button>
+                <button ng-class="{'active': Settings.data.content.forceAutoPlay}" ng-click="Settings.setAutoPlay(true)">On</button>
+                <button class="toLeft" ng-class="{'active': !Settings.data.content.forceAutoPlay}" ng-click="Settings.setAutoPlay(false)">Off</button>
             </div>
             </div>
             <div class="setting-toggle-children">
