--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -1,8 +1,8 @@
-<div class="settings-screen">
-    <div class="tabs">
+<!-- <div class="settings-screen"> -->
+<!--     <div class="tabs">
         <button type="button" class="active">General</button>
-    </div>
-    <div class="general-screen">
+    </div> -->
+ <!--    <div class="general-screen"> -->
         <div>
             <div class="setting-toggle">
             <p class="setting-label">
@@ -48,5 +48,5 @@
             <div class="setting-toggle-children">
             </div>
         </div>
-    </div>
-</div>
+<!--     </div>
+</div> -->
