--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -121,12 +121,12 @@
     </div>
 </div>
 <hr class="none">
-<div id="actionItems"></div>
+<div id="actionItems" style="margin-bottom:50px;"></div>
 <hr class="none">
-<div class="item clearfix row">
-    <div class="main col-md-9 pull-right">
+<div style="width:100%; position:fixed; background-color:white; bottom:0px; z-index:0;">
+    <div class="main col-md-9 pull-right" style="margin-right: 1px; margin-top: 5px;">
         <div class="col-md-6 pull-right padding-right-zero padding-left-ten">
-            <a class="btn btn-primary pull-right stretch" ng-click="ContentMedia.done()"
+            <a class="btn btn-success pull-right" style="width:100px; height:35px; padding-top: 7px;" ng-click="ContentMedia.done()"
                ng-disabled="!ContentMedia.isItemValid" href="javaScript:void(0);">Done</a>
         </div>
     </div>
